--- a/Aliaksandr_Kotau/Homeworks-18/task18.html
+++ b/Aliaksandr_Kotau/Homeworks-18/task18.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <div class="displayFlex">
-      <button class="show" onclick="startPause()">
-          <span id="start" data-about = "start">Start</span>
+      <button class="show" id="start" onclick="startPause()">
+          <span data-about = "start">Start</span>
       </button>
       <p id="output">
           <span>00</span>
